--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-eslint": "^6.0.0",
-    "gulp-phplint": "^0.9.0",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-sass": "^4.0.2",
-    "gulp-uglify": "^3.0.2",
+    "gulp-style-inject": "^0.1.2",
     "gulp-watch": "^5.0.1"
   },
   "dependencies": {}
