--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "gulp-eslint": "^6.0.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-sass": "^4.0.2",
-    "gulp-style-inject": "^0.1.2",
-    "gulp-watch": "^5.0.1"
-  },
-  "dependencies": {}
+    "gulp-inline-code": "git+https://github.com/jchmski/gulp-inline-code.git"
+  }
 }
