--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "babel": "^6.23.0",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
+	"gulp-autoprefixer": "^7.0.1",
+	"gulp-uglify": "^3.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-eslint": "^6.0.0",
